--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,6 +19,7 @@ buildscript {
     }
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -32,6 +33,9 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
+        jcenter()
+        mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -47,7 +51,6 @@ allprojects {
                 excludeGroup "com.facebook.react"
             }
         }
-        google()
         maven { url 'https://www.jitpack.io' }
     }
 }
