--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,7 @@
       "@ui/icons": ["./src/ui/icons"],
       "@ui/filter": ["./src/ui/filter"],
       "@ui/details": ["./src/ui/details"],
+      "@ui/modal": ["./src/ui/modal"],
       "@screens": ["./src/screens"],
       "@hooks": ["./src/hooks"],
       "@theme": ["./src/theme"],
