--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,11 +43,12 @@
       "@ui/common": ["./src/ui/common"],
       "@ui/badges": ["./src/ui/badges"],
       "@ui/layouts": ["./src/ui/layouts"],
-      "@models": ["./src/models"],
       "@ui/icons": ["./src/ui/icons"],
       "@ui/filter": ["./src/ui/filter"],
       "@ui/details": ["./src/ui/details"],
       "@ui/modal": ["./src/ui/modal"],
+      "@models": ["./src/models"],
+      "@utils": ["./src/utils"],
       "@screens": ["./src/screens"],
       "@hooks": ["./src/hooks"],
       "@theme": ["./src/theme"],
