--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@apollo/client": "3.5.10",
     "@graphql-codegen/cli": "2.6.2",
-    "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/blur": "3.6.0",
     "@react-native-community/checkbox": "0.5.12",
     "@react-navigation/bottom-tabs": "6.0.7",
     "@react-navigation/native": "6.0.4",
@@ -23,11 +23,10 @@
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-modal": "^13.0.1",
+    "react-native-modal": "13.0.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.8.0",
     "react-native-svg": "12.3.0",
-    "react-native-svg-transformer": "1.0.0",
     "styled-components": "5.3.1",
     "styled-tools": "1.7.2",
     "uuid": "8.3.2"
