--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-modal": "13.0.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.8.0",
     "react-native-svg": "12.3.0",
     "styled-components": "5.3.1",
-    "styled-tools": "1.7.2",
-    "uuid": "8.3.2"
+    "styled-tools": "1.7.2"
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
@@ -42,6 +42,7 @@
     "@types/jest": "26.0.23",
     "@types/lodash": "4.14.175",
     "@types/react-native": "0.65.0",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-test-renderer": "17.0.1",
     "@types/styled-components": "5.1.14",
     "@types/styled-components-react-native": "5.1.1",
