--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,7 @@
       "@ui/filter": ["./src/ui/filter"],
       "@ui/details": ["./src/ui/details"],
       "@ui/modal": ["./src/ui/modal"],
-      "@models": ["./src/models"],
+      "@models": ["src/types"],
       "@utils": ["./src/utils"],
       "@screens": ["./src/screens"],
       "@hooks": ["./src/hooks"],
@@ -59,7 +59,7 @@
       "*": ["./*"],
       },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
-    "typeRoots": ["./src/theme/types.d.ts", "./node_modules/@types"],                       /* List of folders to include type definitions from. */
+    "typeRoots": ["src/types/theme.d.ts", "src/types/env.d.ts", "./node_modules/@types"],                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true,     /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
